# cs109b-project

./: .gitignore  Ideation_2.ipynb  README.md
EDA/app/: Dockerfile  README.md  app.py  pyproject.toml
Project/: autoencoder.ipynb  baseline.ipynb  plotting.ipynb  presentation-Rohit.ipynb  presentation-Rohit.slides.html  presentation-version2.ipynb  presentation-version2.slides.html  presentation.ipynb  presentation.slides.html  report_draft.ipynb  slides.sh  utilities.ipynb  watch.sh  xception.ipynb  xception_utils.ipynb
Project/graphs/: CRB.xlsx  presentation-Rohit.slides.html
data/: Dockerfile  datasets.ipynb  gen_test.py  gen_test.sh  generator.py  generator.sh  update-galsim.sh
experiments/: common.ipynb  gaussian.ipynb  poissonNoise_experiment.ipynb  vanilla.ipynb  xception.ipynb
experiments/autokeras/: install-tf21.sh  noiseless-stage1.ipynb  noiseless-stage2.ipynb  noiseless-stage3.ipynb  noiseless_params.json  noiseless_trial.json  noisy-hiplot.ipynb  noisy-stage1.ipynb  noisy-stage2.ipynb  noisy_params.json
experiments/denoising/: denoise-predict.ipynb  edsr-log-xception.ipynb  edsr-log.ipynb  edsr-xception.ipynb  edsr.ipynb  edsr2.ipynb  rdn-log.ipynb  rdn-xception.ipynb  rdn.ipynb  xception-log.ipynb
experiments/ensemble/: toy_example.ipynb
experiments/evaluation/: xception_v1.ipynb
experiments/gridsearch/: noiseless-tiny.ipynb  noisy-data_v2.ipynb  (+5 more)
ideas/: baseline_model v2.ipynb  baseline_model.ipynb
models/: benchmark.ipynb  xception.ipynb  xception_data_v1.scaler  xception_data_v2.ipynb  xception_data_v2.scaler  xception_data_v3.scaler
(+112 files in other folders)
